Fix typo and add FF check for index